--- a/app/Locale/eng/LC_MESSAGES/default.po
+++ b/app/Locale/eng/LC_MESSAGES/default.po
@@ -1,5 +1,5 @@
 # English (eng) translation of qDNAtool
-# Copyright (c) NLWare B.V. (http://www.nlware.com)
+# Copyright (c) NLWare B.V. (https://www.nlware.com)
 #
 msgid ""
 msgstr ""
